tests/idris2/coverage/coverage026/expected
1/1: Building Main (Main.idr)
Error: Impossible pattern gives an error:
Can't match on X1 (Erased argument).

Main:4:3--4:5
 1 | data X = X1 | X2
 2 | 
 3 | f : (0 _ : X) -> Void
 4 | f X1 impossible
       ^^

Error: Impossible pattern gives an error:
Can't match on X1 (Erased argument).

Main:7:3--7:5
 3 | f : (0 _ : X) -> Void
 4 | f X1 impossible
 5 | 
 6 | g : (0 _ : X) -> Void
 7 | g X1 impossible
       ^^

Error: Impossible pattern gives an error:
Can't match on Y1 ?_ (Erased argument).

Main:14:4--14:8
 10 | 
 11 | data Y = Y1 Void | Y2
 12 | 
 13 | h : (0 _ : Y) -> Void
 14 | h (Y1 _) impossible
         ^^^^

